; ModuleID = '/home/carl/AnghaBench/linux/fs/dlm/extr_lock.c_find_rsb.c'
source_filename = "/home/carl/AnghaBench/linux/fs/dlm/extr_lock.c_find_rsb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_ls = type { i32 }
%struct.dlm_rsb = type { i32 }

@DLM_RESNAME_MAXLEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dlm_ls*, i8*, i32, i32, i32, %struct.dlm_rsb**)* @find_rsb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_rsb(%struct.dlm_ls* %0, i8* %1, i32 %2, i32 %3, i32 %4, %struct.dlm_rsb** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.dlm_ls*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.dlm_rsb**, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.dlm_ls* %0, %struct.dlm_ls** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.dlm_rsb** %5, %struct.dlm_rsb*** %13, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* @DLM_RESNAME_MAXLEN, align 4
  %19 = icmp sgt i32 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %6
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %7, align 4
  br label %61

23:                                               ; preds = %6
  %24 = load i8*, i8** %9, align 8
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @jhash(i8* %24, i32 %25, i32 0)
  store i32 %26, i32* %14, align 4
  %27 = load i32, i32* %14, align 4
  %28 = load %struct.dlm_ls*, %struct.dlm_ls** %8, align 8
  %29 = getelementptr inbounds %struct.dlm_ls, %struct.dlm_ls* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = sub nsw i32 %30, 1
  %32 = and i32 %27, %31
  store i32 %32, i32* %15, align 4
  %33 = load %struct.dlm_ls*, %struct.dlm_ls** %8, align 8
  %34 = load i32, i32* %14, align 4
  %35 = call i32 @dlm_hash2nodeid(%struct.dlm_ls* %33, i32 %34)
  store i32 %35, i32* %16, align 4
  %36 = load %struct.dlm_ls*, %struct.dlm_ls** %8, align 8
  %37 = call i64 @dlm_no_directory(%struct.dlm_ls* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %50

39:                                               ; preds = %23
  %40 = load %struct.dlm_ls*, %struct.dlm_ls** %8, align 8
  %41 = load i8*, i8** %9, align 8
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* %14, align 4
  %44 = load i32, i32* %15, align 4
  %45 = load i32, i32* %16, align 4
  %46 = load i32, i32* %11, align 4
  %47 = load i32, i32* %12, align 4
  %48 = load %struct.dlm_rsb**, %struct.dlm_rsb*** %13, align 8
  %49 = call i32 @find_rsb_nodir(%struct.dlm_ls* %40, i8* %41, i32 %42, i32 %43, i32 %44, i32 %45, i32 %46, i32 %47, %struct.dlm_rsb** %48)
  store i32 %49, i32* %7, align 4
  br label %61

50:                                               ; preds = %23
  %51 = load %struct.dlm_ls*, %struct.dlm_ls** %8, align 8
  %52 = load i8*, i8** %9, align 8
  %53 = load i32, i32* %10, align 4
  %54 = load i32, i32* %14, align 4
  %55 = load i32, i32* %15, align 4
  %56 = load i32, i32* %16, align 4
  %57 = load i32, i32* %11, align 4
  %58 = load i32, i32* %12, align 4
  %59 = load %struct.dlm_rsb**, %struct.dlm_rsb*** %13, align 8
  %60 = call i32 @find_rsb_dir(%struct.dlm_ls* %51, i8* %52, i32 %53, i32 %54, i32 %55, i32 %56, i32 %57, i32 %58, %struct.dlm_rsb** %59)
  store i32 %60, i32* %7, align 4
  br label %61

61:                                               ; preds = %50, %39, %20
  %62 = load i32, i32* %7, align 4
  ret i32 %62
}

declare dso_local i32 @jhash(i8*, i32, i32) #1

declare dso_local i32 @dlm_hash2nodeid(%struct.dlm_ls*, i32) #1

declare dso_local i64 @dlm_no_directory(%struct.dlm_ls*) #1

declare dso_local i32 @find_rsb_nodir(%struct.dlm_ls*, i8*, i32, i32, i32, i32, i32, i32, %struct.dlm_rsb**) #1

declare dso_local i32 @find_rsb_dir(%struct.dlm_ls*, i8*, i32, i32, i32, i32, i32, i32, %struct.dlm_rsb**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
